--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,14 @@
       "react/prop-types": 0,
       "indent": ["error", 2],
       "linebreak-style": 1,
-      "quotes": ["error", "single"]
+      "quotes": ["error", "single"],
+      "jsx-a11y/label-has-for": [ 2, {
+        "components": [ "Label" ],
+        "required": {
+            "some": [ "nesting", "id" ]
+        },
+        "allowChildren": false
+    }]
     },
     "parserOptions": {
       "ecmaVersion": 2021,
