--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     
     "plugins": ["react", "import", "jsx-a11y"],
     "rules": {
+      "no-undef": "off",
       "react/prop-types": 0,
       "indent": ["error", 2],
       "linebreak-style": 1,
