--- a/back/package.json
+++ b/back/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "start": "ts-node ./src/server.ts",
     "dev": "ts-node-dev --respawn ./src/server.ts"
   },
   "devDependencies": {
